--- a/style.css
+++ b/style.css
@@ -421,7 +421,8 @@ body{
   .hero-text h2 {
     font-size: 1rem;
   }
-  #typing-text {
+  #typing-text-line1,
+  #typing-text-line2{
     font-size: 1rem;
     line-height: 1.5;
     word-break: break-word;
